--- a/src/page/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/page/RequiredKnowledge/RequiredKnowledge.css
@@ -1,4 +1,51 @@
-.my-account {
-  
-  
+.markdown-body {
+  margin: 48px 72px;
+  padding: 0px 10px;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  color: #333;
+  font-family: Roboto,sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  word-wrap: break-word;
+
+  h2 {
+  	padding-bottom: .3em;
+    font-size: 1.5em;
+    border-bottom: 1px solid #eee;
+    margin-top: 1em;
+	  margin-bottom: 16px;
+	  font-weight: 400;
+	  line-height: 1.4;
+	  color: rgba(0,0,0,.87);
+  }
+
+  h3 {
+  	font-size: 1.25em;
+    line-height: 1.4;
+    margin-top: 1em;
+	  margin-bottom: 16px;
+	  font-weight: 400;
+	  line-height: 1.4;
+	  color: rgba(0,0,0,.87);
+  }
+
+  p {
+  	 margin-top: 0;
+    margin-bottom: 16px;
+  }
+
+  ul {
+  	padding-left: 2em;
+  	margin-bottom: 16px;
+  }
+
+  li {
+    list-style: disc;
+  }
+
+  a {
+  	color: #4078c0;
+    text-decoration: none;
+  }
 }
