--- a/src/components/FooterBanner/FooterBanner.css
+++ b/src/components/FooterBanner/FooterBanner.css
@@ -1,5 +1,5 @@
 .footer-banner {
-  padding: 72px 24px 72px 256px;
+  padding: 72px 24px 72px 24px;
   background-color: rgb(33, 33, 33);
   text-align: center;
 
@@ -9,37 +9,12 @@
   }
 
   .footer-text {
-    margin: 0px auto;
-    padding: 0px;
+    margin: 10px 0;
     color: rgba(255, 255, 255, 0.54);
-    max-width: 356px;
   }
 
   a {
     color: rgba(255, 255, 255, 0.87);
-  }
-
-  .github-link {
-    border: 10px;
-    box-sizing: border-box;
-    display: inline-block;
-    font-family: Roboto, sans-serif;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    cursor: pointer;
-    text-decoration: none;
-    margin: 0px;
-    padding: 12px;
-    outline: none;
-    font-size: 0px;
-    font-weight: inherit;
-    position: relative;
-    vertical-align: middle;
-    z-index: 1;
-    overflow: visible;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-    width: 48px;
-    height: 48px;
-    background: none;
   }
 
   .copyright {
