--- a/src/page/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/page/RequiredKnowledge/RequiredKnowledge.css
@@ -8,6 +8,16 @@
   font-size: 16px;
   line-height: 1.6;
   word-wrap: break-word;
+ 
+  .code {
+    padding: 0;
+    padding-top: .2em;
+    padding-bottom: .2em;
+    margin: 0 5px;
+    font-size: 85%;
+    background-color: rgba(0,0,0,.04);
+    border-radius: 3px;
+  }
 
   h2 {
   	padding-bottom: .3em;
