--- a/src/page/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/page/RequiredKnowledge/RequiredKnowledge.css
@@ -69,4 +69,72 @@
     margin-bottom: 32px;
     overflow: hidden;
   }
+
+  table {
+    display: block;
+    width: 100%;
+    overflow: auto;
+    word-break: normal;
+    word-break: keep-all;
+
+    td+td {
+      color: #bf2a5c;
+      font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+      font-size: 90%;
+    }
+
+    td+td+td {
+      color: #666;
+    }
+
+    td+td+td+td {
+      color: rgba(51,51,51,.9);
+      font-family: Roboto,sans-serif;
+      font-size: 95%;
+      min-width: 250px;
+    }
+  }
+
+  tr {
+    background-color: #fff;
+    border-top: 1px solid #ccc;
+  }
+
+  th {
+    border-bottom: 2px solid rgba(0,0,0,.06);
+    border-top: 0 none;
+    color: #888;
+    display: table-cell;
+    font-weight: 400;
+    text-align: left;
+  }
+
+  td {
+    color: #266d90;
+    font-size: 95%;
+  }
+
+  th,
+  td {
+    padding: 6px 13px;
+    border: 1px solid #ddd;
+    border-top: 1px solid rgba(0,0,0,.06);
+    border-left: 0 none;
+    border-right: 0 none;
+    display: table-cell;
+    vertical-align: top;
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
