--- a/src/LeftMenu/LeftMenu.css
+++ b/src/LeftMenu/LeftMenu.css
@@ -117,14 +117,13 @@ table {
 }
 
 .top-bg {
-	height: 40px;
+  height: 40px;
+	line-height: 40px;
   background-color: rgb(33, 150, 243);
-  display: flex;
   color: rgb(255, 255, 255);
-  align-items: center;
-  justify-content: center;
   position: fixed;
-  top: 0px;
+  text-align: center;
+  top: 0;
   width: 100%;
   z-index: 1101;
 }
