修改打包问题

--- a/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
@@ -1,5 +1,5 @@
 .markdown-body {
-  margin: 48px 0;
+  margin: 48px 72px;
   padding: 0px 10px;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
