修改不通个尺寸下自适应问题

--- a/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
@@ -70,10 +70,12 @@
   }
 
   table {
+    display: block;
     width: 100%;
     overflow: auto;
     word-break: normal;
-    word-break: keep-all;
+    border-collapse: collapse;
+    border-spacing: 0;
 
     td+td {
       color: #bf2a5c;
