--- a/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
+++ b/src/Page/GetStarted/RequiredKnowledge/RequiredKnowledge.css
@@ -80,7 +80,7 @@
     overflow: hidden;
   }
 
-  table {
+  .table-proprety {
     display: block;
     width: 100%;
     overflow: auto;
@@ -88,32 +88,10 @@
     border-collapse: collapse;
     border-spacing: 0;
 
-    td+td {
-      color: #bf2a5c;
-      font-family: Menlo,Monaco,Consolas,Courier New,monospace;
-      font-size: 90%;
+    tr {
+      background-color: #fff;
+      border-top: 1px solid #ccc;
     }
-
-    td+td+td {
-      color: #666;
-    }
-
-    td+td+td+td {
-      color: rgba(51,51,51,.9);
-      font-family: Roboto,sans-serif;
-      font-size: 95%;
-      min-width: 250px;
-    }
-
-    ~ p {
-      margin-top: 10px;
-    }
-  }
-
-  tr {
-    background-color: #fff;
-    border-top: 1px solid #ccc;
-  }
 
   th {
     border-bottom: 2px solid rgba(0,0,0,.06);
@@ -138,5 +116,27 @@
     border-right: 0 none;
     display: table-cell;
     vertical-align: top;
+  }
+
+    td+td {
+      color: #bf2a5c;
+      font-family: Menlo,Monaco,Consolas,Courier New,monospace;
+      font-size: 90%;
+    }
+
+    td+td+td {
+      color: #666;
+    }
+
+    td+td+td+td {
+      color: rgba(51,51,51,.9);
+      font-family: Roboto,sans-serif;
+      font-size: 95%;
+      min-width: 250px;
+    }
+
+    ~ p {
+      margin-top: 10px;
+    }
   }
 }
